--- a/lifecycle-data/products/visual-studio-2015.yml
+++ b/lifecycle-data/products/visual-studio-2015.yml
@@ -2,50 +2,36 @@
 metadata:
   title: Visual Studio 2015
   description: Visual Studio 2015 volgt het beleid voor de vaste levenscyclus.
-  ms.date: 09/01/2020
-  keywords: 'Agents,Community,Enterprise,ESM,Express for Web,Express for Windows 10,Express for Windows Desktop,Modeling SDK,Professional,PSM,Release Management,Remote Tools,SDK,Shell (Integrated),Shell (Isolated),Test Professional,TPS,Visual C++ Redistributable'
+  ms.date: 10/04/2021
+  keywords: 
+  ms.openlocfilehash: 492f0646827d31ba0f4c2906f64915c2b22dffc0
+  ms.sourcegitcommit: 59fc218db97bb57b454b1e2a859fca5b8d4cd750
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 10/05/2021
+  ms.locfileid: "3509282"
 name: Visual Studio 2015
-summary: |+
+summary: >+
   Visual Studio 2015 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
-  Dit is van toepassing op de volgende edities: Agents, Community, Enterprise, ESM, Express voor Web, Express voor Windows 10, Express voor Windows Desktop, Modeling SDK, Professional, PSM, Release Management, Werkbalk Extern, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Test Professional, TPS, Visual C++ herdistribueerbaar
+
+
+  Dit geldt voor de volgende edities: Community, Enterprise, Express voor Web, Express voor Windows 10, Express voor Windows Desktop, Professional, Release Management, Test Professional
+
+
 
 products:
-  - vs
+- vs
 policyType: fixed
 supportDates:
   start: 07/20/2015
   end: 10/13/2020
   extendedEnd: 10/14/2025
 releases:
-  - version: Update 3
-    startDate: 06/27/2016
-    endDate: 10/14/2025
-  - version: Original Release
-    startDate: 07/20/2015
-    endDate: 10/14/2025
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)
-
-
-  ## <a name="editions"></a>Edities 
-  * Agents
-  * Community
-  * Enterprise
-  *  ESM
-  * Express voor Web
-  * Express voor Windows 10
-  * Express voor Windows Desktop
-  * Modeling SDK
-  * Professional
-  * PSM
-  * Releasebeheer
-  * Werkbalk extern
-  * SDK
-  * Shell (geïntegreerde modus)
-  * Shell (geïsoleerde modus)
-  * Test Professional
-  * TPS
-  * Visual C++ herdistribueerbaar
+- version: Update 3
+  startDate: 06/27/2016
+  endDate: 10/14/2025
+- version: Original Release
+  startDate: 07/20/2015
+  endDate: 10/14/2025
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie voor oudere versies van Visual Studio](/visualstudio/releases/2019/servicing-vs2019#support-for-older-versions-of-visual-studio)\n* [Servicepackbeleid](/lifecycle/faq/fixed-policy#what-is-the-lifecycle-policy-for-service-packs-)\n\n\n> [!NOTE]\n> Visual Studio 2015-versies van de volgende componenten worden geleverd met en ondersteund als onderdeel van de levenscyclus van Visual Studio 2015: Agents, ESM, Modeling SDK, PSM, Remote Tools, SDK, Shell (geïntegreerd), Shell (geïsoleerd), TPS, Te distribueren pakket Visual C++.\n\n\n## <a name=\"editions\"></a>Edities \n* Community\n* Enterprise\n* Express voor Web\n* Express voor Windows 10\n* Express voor Windows Desktop\n* Professional\n* Releasebeheer\n* Test Professional"
