--- a/lifecycle-data/products/visual-studio-2017.yml
+++ b/lifecycle-data/products/visual-studio-2017.yml
@@ -2,48 +2,36 @@
 metadata:
   title: Visual Studio 2017
   description: Visual Studio 2017 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/01/2020
-  keywords: 'Agents,Build Tools,Community,Enterprise,ESM,Feedback Client,for Mac,IntelliTrace Standalone Collector,Performance Tools,Professional,PSM,Remote Tools,Team Explorer,Test Professional,Visual C++ Redistributable'
+  ms.date: 09/23/2021
+  keywords: 
+  ms.openlocfilehash: 1026f138c847797213d0bb84b3df630e5c338f99
+  ms.sourcegitcommit: 59fc218db97bb57b454b1e2a859fca5b8d4cd750
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 10/05/2021
+  ms.locfileid: "3509208"
 name: Visual Studio 2017
-summary: |+
+summary: >+
   Visual Studio 2017 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
-  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, ESM, Feedback Client, voor Mac, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Professional, Werkbalk Extern, Team Explorer, Test Professional, Visual C++ herdistribueerbaar
+
+
+  Dit is van toepassing op de volgende edities: Community, Enterprise, Professional, Test Professional
+
+
 
 products:
-  - vs
+- vs
 policyType: fixed
 supportDates:
   start: 03/07/2017
   end: 04/12/2022
   extendedEnd: 04/13/2027
 releases:
-  - version: Version 15.9
-    startDate: 11/13/2018
-    endDate: 04/13/2027
-  - version: Version 15.0
-    startDate: 03/07/2017
-    endDate: 01/14/2020
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Aankondiging](https://devblogs.microsoft.com/visualstudio/visual-studio-2017-and-visual-studio-for-mac-support-updates/)
-  * [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-vs#support-for-older-versions-of-visual-studio)
-
-
-  ## <a name="editions"></a>Edities 
-  * Agents
-  * Opbouwhulpmiddelen
-  * Community
-  * Enterprise
-  *  ESM
-  * Feedback client
-  * Voor Mac
-  * IntelliTrace Standalone Collector
-  * Prestatiehulpprogramma's
-  * Professional
-  * PSM
-  * Werkbalk extern
-  * Team Explorer
-  * Test Professional
-  * Visual C++ herdistribueerbaar
+- version: Version 15.9
+  startDate: 11/13/2018
+  endDate: 04/13/2027
+- version: Version 15.0
+  startDate: 03/07/2017
+  endDate: 01/14/2020
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Visual Studio blog-aankondigingen](https://devblogs.microsoft.com/visualstudio/visual-studio-2017-and-visual-studio-for-mac-support-updates/)\n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-vs#support-for-older-versions-of-visual-studio)\n* [Visual Studio 2017-downloadpagina](https://my.visualstudio.com/Downloads?q=Visual%20Studio%202017)\n* [Visual Studio 2017-releaseopmerkingen](/visualstudio/releasenotes/vs2017-relnotes)\n\n\n> [!NOTE]\n> Visual Studio 2017-versies van de volgende componenten worden geleverd met en ondersteund als onderdeel van de levenscyclus van Visual Studio 2017: Agents, Build-hulpmiddelen, Community, Enterprise, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Werkbalk extern, Team Explorer, Te distribueren pakket Visual C++.\n\n\n## <a name=\"editions\"></a>Edities \n* Community\n* Enterprise\n* Professional\n* Test Professional"
