--- a/lifecycle-data/products/visual-studio-2012.yml
+++ b/lifecycle-data/products/visual-studio-2012.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Visual Studio 2012
   description: Visual Studio 2012 volgt het vaste levenscyclusbeleid.
-  ms.date: 10/04/2021
+  ms.date: 10/11/2021
   keywords: 
-  ms.openlocfilehash: 9d4be228f6bc6fb4e6c418c13faa8886fcd045d1
-  ms.sourcegitcommit: 59fc218db97bb57b454b1e2a859fca5b8d4cd750
+  ms.openlocfilehash: 68a9d61205020193274f000d8aac5983e94b0b5d
+  ms.sourcegitcommit: e5d80ad2e1e33e12fda006a76248ec3fb74c7af6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 10/05/2021
-  ms.locfileid: "3509171"
+  ms.lasthandoff: 10/11/2021
+  ms.locfileid: "3514171"
 name: Visual Studio 2012
 summary: >+
   Visual Studio 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -37,4 +37,4 @@ releases:
 - version: Original Release
   startDate: 10/31/2012
   endDate: 01/10/2023
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie voor oudere versies van Visual Studio](/visualstudio/releases/2019/servicing#support-for-older-versions-of-visual-studio)\n* [Servicepackbeleid](/lifecycle/faq/fixed-policy#what-is-the-lifecycle-policy-for-service-packs-)\n\n\n> [!NOTE]\n> Visual Studio 2012-versies van de volgende componenten worden geleverd met en ondersteund als onderdeel van de levenscyclus van Visual Studio 2012: Agents, IntelliTrace-collector, Microsoft Azure Tools, Remote Tools, SDK, Shell (geïntegreerd), Shell (geïsoleerd), SQL Server Data Tools, Team Explorer, Te distribueren pakket Visual C++, Webwerkset-uitbreidingen.\n\n\n## <a name=\"editions\"></a>Edities \n* Express voor Web\n* Express voor Windows Desktop\n* Premium\n* Professional\n* Team Explorer\n* Ultimate"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie voor oudere versies van Visual Studio](/visualstudio/releases/2019/servicing-vs2019#support-for-older-versions-of-visual-studio)\n\n\n> [!NOTE]\n> Visual Studio 2012-versies van de volgende componenten worden geleverd met en ondersteund als onderdeel van de levenscyclus van Visual Studio 2012: Agents, IntelliTrace-collector, Microsoft Azure Tools, Remote Tools, SDK, Shell (geïntegreerd), Shell (geïsoleerd), SQL Server Data Tools, Team Explorer, Te distribueren pakket Visual C++, Webwerkset-uitbreidingen.\n\n\n## <a name=\"editions\"></a>Edities \n* Express voor Web\n* Express voor Windows Desktop\n* Premium\n* Professional\n* Team Explorer\n* Ultimate"
