--- a/lifecycle-data/products/microsoft-application-virtualization-46.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-46.yml
@@ -3,44 +3,38 @@ metadata:
   title: Microsoft Application Virtualization 4.6
   description: Microsoft Application Virtualization 4.6 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'for Remote Desktop Services,for Windows Desktops,Sequencer'
+  keywords: for Remote Desktop Services,for Windows Desktops,Sequencer
+  ms.openlocfilehash: fb533aa91b47539b019872143dbfa2fcdd3d5cb0
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4127685"
 name: Microsoft Application Virtualization 4.6
-summary: |+
+summary: >+
   Microsoft Application Virtualization 4.6 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Windows-desktops, Sequencer
 
 products:
-  - windows
+- windows
 policyType: fixed
 supportDates:
-  start: 05/27/2010
-  end: 07/14/2015
-  extendedEnd: 07/14/2020
+  start: 2010-05-27T00:00:00.000-08:00
+  end: 2015-07-14T22:59:59.999-08:00
+  extendedEnd: 2020-07-14T22:59:59.999-08:00
 releases:
-  - version: Service Pack 3
-    startDate: 12/02/2013
-    endDate: 07/14/2020
-  - version: Service Pack 2
-    startDate: 10/01/2012
-    endDate: 01/13/2015
-  - version: Service Pack 1
-    startDate: 01/26/2011
-    endDate: 10/08/2013
-  - version: Original Release
-    startDate: 05/27/2010
-    endDate: 04/10/2012
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)
-  * [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)
-  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
-
-  > [!NOTE]
-  > Aangezien App-V 4.6-client gebruikmaakt van de App-V 4.5-server, wordt de App-V 4.5-server verder ondersteund op basis van de datums van de levenscyclus van App-V 4.6 wanneer deze wordt gebruikt met de ondersteunde App-V 4.6-client.
-
-  ## <a name="editions"></a>Edities 
-  * Voor Extern bureaublad-services
-  * voor Windows Desktops
-  * Sequencer
+- version: Service Pack 3
+  startDate: 2013-12-02T00:00:00.000-08:00
+  endDate: 2020-07-14T22:59:59.999-08:00
+- version: Service Pack 2
+  startDate: 2012-10-01T00:00:00.000-08:00
+  endDate: 2015-01-13T22:59:59.999-08:00
+- version: Service Pack 1
+  startDate: 2011-01-26T00:00:00.000-08:00
+  endDate: 2013-10-08T22:59:59.999-08:00
+- version: Original Release
+  startDate: 2010-05-27T00:00:00.000-08:00
+  endDate: 2012-04-10T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)\n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Aangezien App-V 4.6-client gebruikmaakt van de App-V 4.5-server, wordt de App-V 4.5-server verder ondersteund op basis van de datums van de levenscyclus van App-V 4.6 wanneer deze wordt gebruikt met de ondersteunde App-V 4.6-client.\n\n## <a name=\"editions\"></a>Edities \n* Voor Extern bureaublad-services\n* voor Windows Desktops\n* Sequencer"
