--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-financial-services-10.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-financial-services-10.yml
@@ -3,28 +3,29 @@ metadata:
   title: Microsoft BizTalk Accelerator voor Financial Services 1.0
   description: Microsoft BizTalk Accelerator voor Financial Services 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'Enterprise,Standard'
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: dcdc746c96590a9e6e14709d817b6dc014de9bd9
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4114254"
 name: Microsoft BizTalk Accelerator voor Financial Services 1.0
-summary: |+
+summary: >+
   Microsoft BizTalk Accelerator voor Financial Services 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
-  - microsoft-servers
+- microsoft-servers
 policyType: fixed
 supportDates:
-  start: 03/12/2003
-  end: 04/08/2008
-  extendedEnd: 04/09/2013
+  start: 2003-03-12T00:00:00.000-08:00
+  end: 2008-04-08T22:59:59.999-08:00
+  extendedEnd: 2013-04-09T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 03/12/2003
-    endDate: 04/09/2013
-content: |
-
-
-
-  ## <a name="editions"></a>Edities 
-  * Enterprise
-  * Standard
+- version: Original Release
+  startDate: 2003-03-12T00:00:00.000-08:00
+  endDate: 2013-04-09T22:59:59.999-08:00
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
