--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-30.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-hipaa-30.yml
@@ -3,28 +3,29 @@ metadata:
   title: Microsoft BizTalk Accelerator voor HIPAA 3.0
   description: Microsoft BizTalk Accelerator voor HIPAA 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'Enterprise,Standard'
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 90d467e3a5d9a8cfd7e627feaf008187e5ebfe3f
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4114143"
 name: Microsoft BizTalk Accelerator voor HIPAA 3.0
-summary: |+
+summary: >+
   Microsoft BizTalk Accelerator voor HIPAA 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
-  - microsoft-servers
+- microsoft-servers
 policyType: fixed
 supportDates:
-  start: 12/28/2004
-  end: 01/12/2010
-  extendedEnd: 01/13/2015
+  start: 2004-12-28T00:00:00.000-08:00
+  end: 2010-01-12T22:59:59.999-08:00
+  extendedEnd: 2015-01-13T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 12/28/2004
-    endDate: 01/13/2015
-content: |
-
-
-
-  ## <a name="editions"></a>Edities 
-  * Enterprise
-  * Standard
+- version: Original Release
+  startDate: 2004-12-28T00:00:00.000-08:00
+  endDate: 2015-01-13T22:59:59.999-08:00
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
