--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-23.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-23.yml
@@ -3,33 +3,32 @@ metadata:
   title: Microsoft BizTalk Accelerator voor SWIFT 2.3
   description: Microsoft BizTalk Accelerator voor SWIFT 2.3 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: 'Enterprise,Standard'
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: b96e0fe2f54a7e1eb7466d3658259933e4d1ca05
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4114088"
 name: Microsoft BizTalk Accelerator voor SWIFT 2.3
-summary: |+
+summary: >+
   Microsoft BizTalk Accelerator voor SWIFT 2.3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
-  - microsoft-servers
+- microsoft-servers
 policyType: fixed
 supportDates:
-  start: 06/21/2006
-  end: 10/12/2010
-  extendedEnd: 10/13/2015
+  start: 2006-06-21T00:00:00.000-08:00
+  end: 2010-10-12T22:59:59.999-08:00
+  extendedEnd: 2015-10-13T22:59:59.999-08:00
 releases:
-  - version: Service Pack 1
-    startDate: 09/25/2006
-    endDate: 10/13/2015
-  - version: Original Release
-    startDate: 06/21/2006
-    endDate: 10/14/2008
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
-
-
-  ## <a name="editions"></a>Edities 
-  * Enterprise
-  * Standard
+- version: Service Pack 1
+  startDate: 2006-09-25T00:00:00.000-08:00
+  endDate: 2015-10-13T22:59:59.999-08:00
+- version: Original Release
+  startDate: 2006-06-21T00:00:00.000-08:00
+  endDate: 2008-10-14T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
