--- a/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
+++ b/lifecycle-data/products/microsoft-business-solutionsgreat-plains-80.yml
@@ -4,27 +4,31 @@ metadata:
   description: Microsoft Business Solutions--Great Plains 8.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
+  ms.openlocfilehash: a3aeb46f97caf9ede5902283c78556450b4559d3
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4108038"
 name: Microsoft Business Solutions - Great Plains 8.0
-summary: |
+summary: >
   Microsoft Business Solutions - Great Plains 8.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Standard
 
+
   > [!IMPORTANT]
+
   > De ondersteuning voor dit product is beëindigd op 13 oktober 2009
 products:
-  - dynamics
+- dynamics
 policyType: fixed-mainstream-only
 supportDates:
-  start: 06/01/2004
-  end: 10/13/2009
+  start: 2004-06-01T00:00:00.000-08:00
+  end: 2009-10-13T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 06/01/2004
-    endDate: 10/13/2009
-content: |
-
-
-
-  ## <a name="editions"></a>Edities 
-  * Standard
+- version: Original Release
+  startDate: 2004-06-01T00:00:00.000-08:00
+  endDate: 2009-10-13T22:59:59.999-08:00
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
