--- a/lifecycle-data/products/microsoft-mediaroom.yml
+++ b/lifecycle-data/products/microsoft-mediaroom.yml
@@ -3,32 +3,26 @@ metadata:
   title: Microsoft Mediaroom
   description: Microsoft Mediaroom volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'Application Services 1.0,Client 2.0,Client 2.1,Server 2.0,Server 2.1'
+  keywords: Application Services 1.0,Client 2.0,Client 2.1,Server 2.0,Server 2.1
+  ms.openlocfilehash: afcf982957d8e6ecda62488ad4f6a6716fd5cc3e
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4107483"
 name: Microsoft Mediaroom
-summary: |+
+summary: >+
   Microsoft Mediaroom volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Application Services 1.0, Client 2.0, Client 2.1, Server 2.0, Server 2.1
 
 products:
-  - windows
+- windows
 policyType: fixed-mainstream-only
 supportDates:
-  start: 08/03/2010
+  start: 2010-08-03T00:00:00.000-08:00
 releases:
-  - version: Original Release
-    startDate: 08/03/2010
-content: |
-
-
-  > [!NOTE]
-  > Ericsson heeft in 2013 Microsoft Mediaroom-producten overgenomen. Raadpleeg het [persbericht](http://www.ericsson.com/news/1691160) voor meer informatie. Voor klanten die ondersteuning nodig hebben, klik [hier](https://sharepoint.partners.extranet.microsoft.com/sites/mediaroom/informationresources/lifecycle.aspx).
-  > [!NOTE]
-  > Microsoft Mediaroom Client 2.1 werd op 27 december 2011 uitgebracht. 
-
-  ## <a name="editions"></a>Edities 
-  * Application Services 1.0
-  * Client 2.0
-  * Client 2.1
-  * Server 2.0
-  * Server 2.1
+- version: Original Release
+  startDate: 2010-08-03T00:00:00.000-08:00
+content: "\n\n> [!NOTE]\n> Ericsson heeft in 2013 Microsoft Mediaroom-producten overgenomen. Raadpleeg het [persbericht](http://www.ericsson.com/news/1691160) voor meer informatie. Voor klanten die ondersteuning nodig hebben, klik [hier](https://sharepoint.partners.extranet.microsoft.com/sites/mediaroom/informationresources/lifecycle.aspx).\n> [!NOTE]\n> Microsoft Mediaroom Client 2.1 werd op 27 december 2011 uitgebracht. \n\n## <a name=\"editions\"></a>Edities \n* Application Services 1.0\n* Client 2.0\n* Client 2.1\n* Server 2.0\n* Server 2.1"
