--- a/lifecycle-data/products/windows-server-2012-r2.yml
+++ b/lifecycle-data/products/windows-server-2012-r2.yml
@@ -4,12 +4,12 @@ metadata:
   description: Windows Server 2012 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 11/03/2021
   keywords: 
-  ms.openlocfilehash: 8803112769e915daecef568dd58045403be8c4f4
-  ms.sourcegitcommit: 5d340ff7cb048f68bd696227129860e72fd3c1cb
+  ms.openlocfilehash: 33076fdb2d4ab5b5db8fcac179d6a8d2d0d97de2
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 11/04/2021
-  ms.locfileid: "3559987"
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4104893"
 name: Windows Server 2012 R2
 summary: >+
   Windows Server 2012 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -24,20 +24,20 @@ products:
 - windows
 policyType: fixed
 supportDates:
-  start: 11/25/2013
-  end: 10/09/2018
-  extendedEnd: 10/10/2023
+  start: 2013-11-25T00:00:00.000-08:00
+  end: 2018-10-09T22:59:59.999-08:00
+  extendedEnd: 2023-10-10T22:59:59.999-08:00
 releases:
 - version: Extended Security Update Year 3
-  startDate: 10/15/2025
-  endDate: 10/13/2026
+  startDate: 2025-10-15T00:00:00.000-08:00
+  endDate: 2026-10-13T22:59:59.999-08:00
 - version: Extended Security Update Year 2
-  startDate: 10/09/2024
-  endDate: 10/14/2025
+  startDate: 2024-10-09T00:00:00.000-08:00
+  endDate: 2025-10-14T22:59:59.999-08:00
 - version: Extended Security Update Year 1
-  startDate: 10/11/2023
-  endDate: 10/08/2024
+  startDate: 2023-10-11T00:00:00.000-08:00
+  endDate: 2024-10-08T22:59:59.999-08:00
 - version: Original Release
-  startDate: 11/25/2013
-  endDate: 10/10/2023
+  startDate: 2013-11-25T00:00:00.000-08:00
+  endDate: 2023-10-10T22:59:59.999-08:00
 content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows-server/upgrade/upgrade-overview)\n* [Veelgestelde vragen over levenscyclus - uitgebreide beveiligingsupdates](/lifecycle/faq/extended-security-updates)\n\n\n> [!NOTE]\n> De basis- en uitgebreide ondersteuning voor dit product is uitgebreid om klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* voor Embedded Systems\n* Foundation\n* Standard"
