--- a/lifecycle-data/products/windows-storage-server-2008-embedded.yml
+++ b/lifecycle-data/products/windows-storage-server-2008-embedded.yml
@@ -3,37 +3,29 @@ metadata:
   title: Windows Storage Server 2008 Embedded
   description: Windows Storage Server 2008 Embedded volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: '32 Bit,64 Bit,Basic,Basic 32-Bit,Enterprise,Standard,Workgroup'
+  keywords: 32 Bit,64 Bit,Basic,Basic 32-Bit,Enterprise,Standard,Workgroup
+  ms.openlocfilehash: ed2f1b330ed396dd22cd69dbcd58a80f64eec7bf
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4104590"
 name: Windows Storage Server 2008 Embedded
-summary: |+
+summary: >+
   Windows Storage Server 2008 Embedded volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: 32-bits, 64-bits, Basic, Basic 32-bits, Enterprise, Standard, Workgroup
 
 products:
-  - windows
+- windows
 policyType: fixed
 supportDates:
-  start: 07/19/2009
-  end: 01/13/2015
-  extendedEnd: 01/14/2020
+  start: 2009-07-19T00:00:00.000-08:00
+  end: 2015-01-13T22:59:59.999-08:00
+  extendedEnd: 2020-01-14T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 07/19/2009
-    endDate: 07/12/2011
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Richtlijnen voor migratie](/archive/blogs/storageserver/announcing-windows-storage-server-2016)
-
-  > [!NOTE]
-  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
-
-  ## <a name="editions"></a>Edities 
-  * 32-bits
-  * 64-bits
-  * Basic
-  * Basic 32-bits
-  * Enterprise
-  * Standard
-  * Workgroup
+- version: Original Release
+  startDate: 2009-07-19T00:00:00.000-08:00
+  endDate: 2011-07-12T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/archive/blogs/storageserver/announcing-windows-storage-server-2016)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.\n\n## <a name=\"editions\"></a>Edities \n* 32-bits\n* 64-bits\n* Basic\n* Basic 32-bits\n* Enterprise\n* Standard\n* Workgroup"
