--- a/lifecycle-data/products/winternals.yml
+++ b/lifecycle-data/products/winternals.yml
@@ -3,34 +3,29 @@ metadata:
   title: Winternals
   description: Winternals volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: 'Administrator''s Pak 5.0,Defrag Manager 3.0,Protection Manager 2.0,Recovery Manager 3.0'
+  keywords: Administrator's Pak 5.0,Defrag Manager 3.0,Protection Manager 2.0,Recovery Manager 3.0
+  ms.openlocfilehash: 3c8da5f9f89e804822ba9543d967c9ac11bd32db
+  ms.sourcegitcommit: 2bcdf249c9ef19aab3355f7dff4e0e020252ff76
+  ms.translationtype: HT
+  ms.contentlocale: nl-NL
+  ms.lasthandoff: 03/18/2022
+  ms.locfileid: "4104486"
 name: Winternals
-summary: |+
+summary: >+
   Winternals volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
 
   Dit is van toepassing op de volgende edities: Administrator's Pak 5.0, Defrag Manager 3.0, Protection Manager 2.0, Recovery Manager 3.0
 
 products:
-  - windows
+- windows
 policyType: fixed
 supportDates:
-  start: 01/01/2007
-  end: 01/12/2010
-  extendedEnd: 01/12/2010
+  start: 2007-01-01T00:00:00.000-08:00
+  end: 2010-01-12T22:59:59.999-08:00
+  extendedEnd: 2010-01-12T22:59:59.999-08:00
 releases:
-  - version: Original Release
-    startDate: 01/01/2007
-    endDate: 01/12/2010
-content: |
-
-  ## <a name="links"></a>Koppelingen 
-  * [Levenscyclusbeleid voor Microsoft-verwervingen](/lifecycle/faq/general-lifecycle#what-is-the-lifecycle-policy-for-products-or-companies-that-microsoft-acquires)
-
-  > [!NOTE]
-  > Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.
-
-  ## <a name="editions"></a>Edities 
-  * Administrator's Pak 5.0
-  * Defrag Manager 3.0
-  * Protection Manager 2.0
-  * Recovery Manager 3.0
+- version: Original Release
+  startDate: 2007-01-01T00:00:00.000-08:00
+  endDate: 2010-01-12T22:59:59.999-08:00
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Levenscyclusbeleid voor Microsoft-verwervingen](/lifecycle/faq/general-lifecycle#what-is-the-lifecycle-policy-for-products-or-companies-that-microsoft-acquires)\n\n> [!NOTE]\n> Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* Administrator's Pak 5.0\n* Defrag Manager 3.0\n* Protection Manager 2.0\n* Recovery Manager 3.0"
